--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>This is our group project for GEOM101</h1>
 <p>Group Members: Dan Noakes, Lauren Plesko, Pat Lebrun, and Rylie Nellis</p>
 <p>Pat is editing the doc</p>
+<p>I hope this works</p>
 
 </body>
 </html>
